# ptl

./: Cargo.toml  Cross.toml  README.md
.github/workflows/: ci.yml  release.yml
Formula/: ptl.rb
scripts/: release
src/: config.rs  error.rs  main.rs
src/printer/: devices.rs  mod.rs  protocol.rs  raster.rs
src/render/: compose.rs  image.rs  mod.rs  text.rs
src/tui/: app.rs  mod.rs  ui.rs
