[package]
name = "ptl"
version = "0.1.0"
edition = "2021"
description = "Brother P-Touch label printer CLI"
license = "GPL-3.0"

[[bin]]
name = "ptl"
path = "src/main.rs"

[dependencies]
rusb = "0.9.4"
cosmic-text = "0.18.2"
image = { version = "0.25.10", default-features = false, features = ["png"] }
clap = { version = "4.5", features = ["derive"] }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
toml = "1.1.1"
dirs = "6.0.0"
anyhow = "1.0.102"
thiserror = "2.0.18"
bitflags = "2.11.0"
log = "0.4.29"
env_logger = "0.11.10"

[features]
default = []
vendored-libusb = ["rusb/vendored"]

[profile.release]
strip = true
lto = true
codegen-units = 1
